# ltpi-benchmark

./: README.md  pyproject.toml
custom_modules/jersey/jersey_pipeline/: gaussian_outliers.py  helpers.py  jersey_number_dataset.py  legibility_classifier.py  networks.py  str.py
custom_modules/team/roles_and_teams_classification/: README.md  environment.yaml  main.py  requirements.txt
custom_modules/team/roles_and_teams_classification/src/: config.yaml  utils.py
custom_modules/team/roles_and_teams_classification/src/modeling/: mobilenet.py  postprocess.py
custom_modules/team/roles_and_teams_classification/src/parsing/: config_parser.py  df_parsers.py
ltpi/: config_finder.py
ltpi/configs/: ltpi.yaml  soccernet.yaml
ltpi/configs/dataset/: reid.yaml  reid_video.yaml
ltpi/configs/eval/: reid_metrics.yaml
ltpi/configs/modules/identification/: base_identifier.yaml
ltpi/configs/modules/jersey_number_detect/: jersey_pipeline_for_prod.yaml
ltpi/configs/modules/reid/: prtreid.yaml
ltpi/configs/modules/team/: pretrained.yaml
ltpi/configs/modules/tracklet_agg/: majority_vote.yaml
ltpi/wrappers/dataset/: reid_dataset.py  reid_video_dataset.py
ltpi/wrappers/eval/: reid_metrics.py
ltpi/wrappers/identification/: base_identifier.py
ltpi/wrappers/jersey/: jersey_pipeline_for_prod.py
ltpi/wrappers/reid/: prtreid_api.py  prtreid_dataset.py
ltpi/wrappers/team/: pretrained.py
ltpi/wrappers/tracklet_agg/: majority_vote_api.py
scripts/: score_ltpi.py
